--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
     "kleur": "^4.1.3",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
+    "typescript": "^4.1.3",
     "ts-jest": "^26.4.4"
   }
 }
