--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "brokher",
   "version": "0.0.1",
-  "description": "A Wrapper for Message Brokers",
+  "description": "A Wrapper for Message Brokhers",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "tsc": "tsc"
   },
   "keywords": [
-    "message-broker",
+    "message-Brokher",
     "rabbitmq"
   ],
   "author": "Acidiney Dias <acidineydias@gmail.com>",
