--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brokher",
-  "version": "0.0.9",
+  "version": "0.1.1",
   "description": "A Wrapper for Message Brokhers",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "prepublish": "npm run tsc"
   },
   "keywords": [
     "message-Brokher",
