--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brokher",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A Wrapper for Message Brokhers",
   "main": "dist/index.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
     "kleur": "^4.1.3",
-    "typescript": "^4.1.3",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
