--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brokher",
-  "version": "0.1.3",
+  "version": "0.1.3-beta",
   "description": "A Wrapper for Message Brokhers",
   "main": "dist/index.js",
   "scripts": {
