--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "brokher",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A Wrapper for Message Brokhers",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent --detectOpenHandles",
     "tsc": "tsc",
     "prepublish": "npm run tsc"
   },
@@ -17,14 +17,15 @@
   "devDependencies": {
     "@types/amqplib": "^0.5.16",
     "@types/jest": "^26.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10ckage/brooker/.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "amqplib": "^0.6.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "^26.6.3",
     "kleur": "^4.1.3",
     "ts-jest": "^26.4.4",
